some overflow issues and added portfolio animation

--- a/src/components/projects/project-main/projectMain.scss
+++ b/src/components/projects/project-main/projectMain.scss
@@ -7,6 +7,8 @@
     align-items: center;
     position: relative;
 
+    
+
     .projTitle {
         text-align: center;
         margin-top: 90px;
@@ -41,6 +43,7 @@
         padding-top: 10px;
         padding-bottom: 10px;
         overflow: hidden; 
+        transition: all 0.5s ease-in-out;
 
         .projItem{
             width: 90%;
@@ -63,15 +66,15 @@
                     flex-direction: column;
                     justify-content: center;
                     align-items: center;
-                    padding:2.5em;
+                    padding:0.2em;
 
                     .projLcTitle{
                         position: relative;
 
                         h2{
-                            font-size: 4em;
+                            font-size: 2.5em;
                             text-transform: uppercase;
-                            padding: 3px;
+                            padding: 30px;
                             margin-bottom: 50px;
                             color: rgba($color: #000000, $alpha: 0.7);
                         }
@@ -89,7 +92,7 @@
                     }
 
                     h5{
-                        padding: 10px;
+                        padding: 0 20px;
                         font-size: 2rem;
                         color: rgba($color: #000000, $alpha: 0.6);
                         text-transform: capitalize;
@@ -100,11 +103,13 @@
 
                     p{
                         text-align: justify;
+                        padding: 0 20px;
                     }
 
                     .visitBtn{
                         width: 100%;
-                        margin: 25px;
+                        margin-left: 40px;
+                        padding-top: 30px;
                         a{
                             .lcProjGlobeBtn{
                                 color: rgba($color: #000000, $alpha: 0.7);
@@ -131,11 +136,22 @@
                 flex:8;
                 height: 100%;
                 position: relative;
+                overflow: hidden !important;
+                transition: all 1s ease-in-out;
+                
+                
 
                 .projRImageBg{
                     position: absolute;
                     transform: rotate(-15deg) translateX(100px) translateY(-150px);
                     opacity: 0.75;
+                    overflow: hidden !important;
+
+                    img{
+                        overflow: hidden !important;
+                        overflow-y: hidden !important;
+                        overflow-x: hidden !important;
+                    }
                 }
 
                 .prToolsUsedDiv{
